[ch9537] Fix long emails overflowing the design

--- a/packages/portal-style/src/modules/_ticket-meta.scss
+++ b/packages/portal-style/src/modules/_ticket-meta.scss
@@ -51,6 +51,10 @@
       }
     }
 
+    &-title {
+      max-width: calc(100% - 40px);
+    }
+
     &-name {
       font-size: $s16;
     }
@@ -58,6 +62,11 @@
     &-email {
       font-size: $s14;
       color: $grey-dark;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      max-width: 100%;
+      display: inline-block;
+      padding-top: 4px;
     }
 
     &-link {
